--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "lucide-react": "^0.477.0",
@@ -18,6 +19,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
