Google login .env

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 VITE_SERVER_APP_URL=http://localhost:8000
-VITE_GOOGLE_CLIENT_ID=690691222870-8fmk6jvbsp5mkujc28s1tivqvqito4be.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-JWT_SECRET=your-jwt-secret-here
+# VITE_GOOGLE_CLIENT_ID=690691222870-8fmk6jvbsp5mkujc28s1tivqvqito4be.apps.googleusercontent.com
+# GOOGLE_CLIENT_SECRET=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
+# JWT_SECRET=your-jwt-secret-here
