--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 PORT = 8000
 MONGODB_URL=mongodb://127.0.0.1:27017/classroom
+# MONGODB_URL=mongodb://10.70.12.111:27017/classroom
 JWT_SECRET='Classroom'
 REACT_APP_GOOGLE_CLIENT_ID=690691222870-8fmk6jvbsp5mkujc28s1tivqvqito4be.apps.googleusercontent.com
